# simple-rust-server

./: Cargo.toml
src/: main.rs
