[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tower = "0.4.13"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
